Fixed: project-nav spacing from right edge is statically assigned to be equivalent to 40px, but it does not change when resizing windows like other clamp positions do, changed some fonts, made the project-title and project-summary act as a single link button, added a hover effect to the parent div of the prior two. New: added a contact box with input fields (doesn't work and input text needs to be changed to black).

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   /* margin: 0; */
   box-sizing: border-box;
   color: #ffffff;
+  text-decoration: none;
   /* border: solid 1px #00000080; */
 }
 
@@ -36,7 +37,6 @@ body {
   opacity: 1;
   z-index: 0;
   padding-left: clamp(10px, 4vmin, 40px);
-  /* padding-top: clamp(10px, 4vmin, 40px); */
   margin-top: clamp(10px, 4vmin, 40px);
   margin-left: clamp(10px, 4vmin, 40px);
   display: flex;
@@ -62,13 +62,13 @@ body {
 
 .author-title {
   font-size: 1.875rem;
-  font-weight: 600;
+  font-weight: 300;
   margin-bottom: calc(-1.5 * clamp(10px, 4vmin, 40px));
 }
 
 .author-descriptor {
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 300;
 }
 .navbar {
   margin-top: calc(-1 * clamp(10px, 4vmin, 40px));
