--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,13 +1,7 @@
 .author-summary {
-    width: 20%;
-    display: flex;
-    align-items: flex-end;
-}
-
-.author-summary-aligner {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    right: 0;
+  width: 30%;
+  position: absolute;
+  bottom: clamp(10px, 4vmin, 40px);
+  right: clamp(10px, 4vmin, 40px);
+  text-align: right;
 }
