--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,34 +1,48 @@
 .projects-nav {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    gap: 7px;
-    position: absolute;
-    overflow-y: scroll;
-    top: 0;
-    left: 0;
-    /* transform: translatex(calc(100vw - (186.33px + 2 * clamp(10px, 4vmin, 40px)))); */
-    padding-top: calc(3 * clamp(10px, 4vmin, 40px) + 62px);
-    /* filter: blur(2px); */
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 7px;
+  position: absolute;
+  overflow-y: scroll;
+  top: 0;
+  left: 0;
+  transform: translatex(
+    calc(100vw - (150px + 2 * clamp(10px, 4vmin, 40px)))
+  );
+  padding-top: calc(2.32 * clamp(10px, 4vmin, 40px));
 }
 .project-summary {
-    text-align: right;
-    font-size: 1rem;
-    font-weight: 300;
-    text-decoration: none;
+  text-align: right;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.project-title {
+  text-align: right;
+  font-size: 1.875rem;
+  font-weight: 300;
+  margin-bottom: calc(-0.4 * clamp(10px, 4vmin, 40px));
+}
+
+a:hover .project-title,
+a:hover .project-summary {
+  color: #000000;
 }
 
 .projects-nav::-webkit-scrollbar {
     display: none;
 }
 
-.project-title {
-    text-align: right;
-    font-size: 1.875rem;
-    font-weight: 300;
-    text-decoration: none;
+.projects-nav p {
+    font-weight: 600;
+}
+
+/* .projects-nav::-webkit-scrollbar {
+    display: none;
 }
 
 .projects-nav p {
@@ -53,7 +67,7 @@
     display: flex;
     justify-content: right;
     /* position: relative; */
-}
+/* }
 
 .web-content {
     height: 100%;
@@ -61,7 +75,7 @@
     display: flex;
     flex-direction: column;
     gap: clamp(10px, 4vmin, 40px);
-}
+} */
 
 /* .transparent-border {
     width: 100%;
